<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToOrganize</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="title_activity_task_manager">TaskManager</string>
    <string name="title_activity_write_task">New Task</string>
    <string name="title_activity_write_event">New Event</string>
    <string name="save_write_task">Save Task</string>
    <string name="search_string">Search </string>
    <string name="add_string">Add</string>
    <string name="add_event_string">Add Event</string>
    <string name="add_task_string">Add Note</string>
    <string name="add_habit_string">Add Habit</string>
    <string name="add_todo_string">Add To Do Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_text_hint"> Add Task Text </string>
    <string name="title_activity_view_task">Task</string>
    <string name="task_text_label">Task Text </string>
    <string name="update_task_button">Update Task</string>
    <string name="set_date_task">Set Date</string>
    <string name="title_activity_home">HomeActivity</string>

    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Events</item>
        <item>Routines</item>
        <item>To Do List</item>
        <item>Notes</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_time</item>
        <item>@drawable/ic_action_keyboard</item>
        <item>@drawable/ic_action_play</item>
        <item>@drawable/ic_action_settings</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_tasks_text">Tasks</string>
    <string name="nav_routines_text">Routines</string>
    <string name="nav_goals_text">Goals</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_write__note_">Write_Note_Activity</string>
    <string name="save_write_note">Save Note</string>
    <string name="write_note_title"></string>
    <string name="write_note_text_hint">Note Text</string>
    <string name="write_note_title_hint">Note Title</string>
    <string name="write_note_label">Add Note</string>
    <string name="title_activity_view_calendar">ViewCalendar</string>
    <string name="save_write_event">Save Event</string>
    <string name="cancel_write_event">Cancel Event</string>
    <string name="event_title_hint">Add an event</string>
    <string name="add_reminder_event">Add Reminder</string>
    <string name="add_guest_event">Add Guest</string>
    <string name="desc">Profile Pic</string>
    <string name="update_write_note">Update Note</string>
    <string name="update_note_label">Update Note</string>
    <string name="title_view_notes">Notes</string>
    <string name="title_list_notes">Notes</string>
    <string name="title_view_note">Note</string>
    <string name="title_activity_write_todo">Write Todo</string>
    <string name="title_view_todo">To Do</string>

</resources>
