<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.toorganize.activities.HomeActivity" >


    <item android:id="@+id/action_new_event"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_event_string"
        app:showAsAction="always"
        android:visible="true"/>
    <item android:id="@+id/action_new_habit"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_habit_string"
        app:showAsAction="always"
        android:visible="true"/>
    <item android:id="@+id/action_new_task"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_task_string"
        app:showAsAction="always"
        android:visible="true"/>

    <item android:id="@+id/action_new_todo"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add_todo_string"
        app:showAsAction="always"
        android:visible="true"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="true"/>


</menu>
