<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.toorganize.activities.WriteTask">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskText"
            android:hint="@string/task_text_hint"/>


    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/task_edit_text_dt"
            android:layout_weight="0.6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_date_task"
            android:id="@+id/set_date_button_task" />


    </LinearLayout>



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_write_task"
            android:id="@+id/save_task_btn"
 />

        </LinearLayout>




</LinearLayout>
