<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.toorganize.activities.WriteTask"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/update_note_label"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textSize="32sp"
            android:paddingStart="8dp" />
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:id="@+id/noteText"
            android:hint="@string/write_note_text_hint"
            android:layout_gravity="center_horizontal"
            android:gravity="top" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show on Home Page"
            android:id="@+id/isDashboardHead"
            android:checked="false" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_write_note"
        android:id="@+id/update_note_btn"
        android:background="#e0ab18"
        android:textColor="#fff"
        android:layout_marginTop="8dp" />




</LinearLayout>