<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.toorganize.activities.WriteTask"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventTitle"
            android:hint="@string/event_title_hint"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <EditText
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eventDescription"
            android:layout_weight="0.6"
            android:hint="Description" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_edit_location"
            android:layout_weight="1"
            android:hint="Location" />


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Options"
            android:id="@+id/textView3"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="All Day"
            android:id="@+id/allDayCheckBox"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="From"
            android:id="@+id/textView"
            android:layout_weight="0.1"
            android:padding="8dp" />

        <EditText
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editFromDate"
            android:text="25-09-2014"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3" />

        <EditText
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editFromTime"
            android:focusable="false"
            android:layout_weight="0.5"
            android:text="21:00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="To"
            android:id="@+id/textView2"
            android:layout_weight="0.1"
            android:padding="8dp" />

        <EditText
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editToDate"
            android:text="25-09-2014"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3" />

        <EditText
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editToTime"
            android:focusable="false"
            android:layout_weight="0.5"
            android:text="21:00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7">

        <EditText
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editRepetion"
            android:hint="Repetition"
             />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More"
            android:id="@+id/textView4"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/reminder_container"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_reminder_button"
            android:text="@string/add_reminder_event"
            android:textColor="#fff"
            android:background="#b7c0c7"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout10"
        android:layout_marginTop="8dp" >

        <MultiAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guest_view"
            android:hint="Guest" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_event_button"
            android:text="@string/cancel_write_event"
            android:background="#e15258"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight=".50"
            android:layout_margin="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_event_btn"
            android:text="@string/save_write_event"
            android:background="#51b46d"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight=".50"
            android:layout_margin="8dp" />

    </LinearLayout>


</LinearLayout>
</ScrollView>

    </LinearLayout>